--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <title>webpack 中文社区</title>
@@ -18,10 +19,14 @@
     <style>
 
     </style>
+    <script type="text/html" src="node_modules/requirejs/require.js"></script>
 </head>
+
 <body>
+
     <div id="root">
         <!--skeleton-->
     </div>
 </body>
+
 </html>
